--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.tittle{
+  font-size: 1rem;
+}
+.headerSection{
+ display: flex;
+ justify-content: space-between;
+ padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.center ul li{
+  list-style: none;
+  display: inline-flex;
+  margin: 0px 10px;
+}
+.left{
+  flex: 4;
+  /* border: 1px solid black; */
+}
+.center{
+  flex: 4;
+  /* border: 1px solid black; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search{
+  flex: 2;
+  /* border: 1px solid black; */
+}
+
+.right{
+  flex: 4;
+  border: 1px solid black;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 0px 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.bannerBox{
+  margin: 10px 0px;
 }
+.bannerBox img{
+  width: 100%;
+}
+.mensColection{
+  display: flex;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.gentsImage{
+  width: 225px;
+  height: 225px;
 }
